--- a/Blogs.html
+++ b/Blogs.html
@@ -45,10 +45,10 @@
         <div class=grid>
             <a href=Blogs/Blog_1.html>
                 <div class="col">
-                    <h3>Col 1 </h3>
+                    <h3>Still working on first blog. </h3>
                 </div>
             </a>
-            <a href=#>
+<!--             <a href=#>
                 <div class="col">
                     <h3>Col 2 </h3>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="col">
                     <h3>Col 9 </h3>
                 </div>
-            </a>
+            </a> -->
         </div>
         <footer>
             © Sarhana 2024
