--- a/Projects/Project_1.html
+++ b/Projects/Project_1.html
@@ -32,7 +32,7 @@
         </video>
 
         <h3 style="font-weight:normal; margin-left: 1rem; padding-left: 0;">
-            Tools used: <strong> Unity Game Engine: C#</strong>
+            Tools used: Unity Game Engine: C#
  
 
             
